--- a/appspec.yml
+++ b/appspec.yml
@@ -3,3 +3,15 @@ os: linux
 files:
   - source: /index.html
     destination: /var/www/html/
+hooks:
+  BeforeInstall:
+    - location: scripts/install_dependencies
+      timeout: 60
+      runas: root
+    - location: scripts/start_server
+      timeout: 60
+      runas: root
+  ApplicationStop:
+    - location: scripts/stop_server
+      timeout: 60
+      runas: root
